feat: auth and register user
