# api/entities/User.ts
@@ -1,7 +1,14 @@
 export class User {
   public _id?: string
+  public name?: string
   public username?: string
   public email?: string
+  public cpf?: string
+  public birthDate?: string
+  public picture?: string
+  public country?: string
+  public phone?: string
+  public desc?: string
   public permissions?: string[]
   public hash?: string
   public salt?: string
@@ -9,10 +16,6 @@ export class User {
     token?: String,
     date?: Date
   }
-  public img?: string
-  public country?: string
-  public phone?: string
-  public desc?: string
   public isSeller?: boolean
 
   constructor(props: User) {
