# api/useCases/SignIn/SignInController.ts
@@ -7,7 +7,7 @@ export class SignInController {
   async handle(request: Request, response: Response) {
     try {
       const result = await this.createUserUseCase.execute({
-        username: request.body.username,
+        email: request.body.email,
         password: request.body.password
       })
 
