# api/useCases/SignIn/SignInDTO.ts
@@ -1,4 +1,4 @@
 export interface SignInDTO {
-  username: string
+  email: string
   password: string
 }
